update submission filter and add test

--- a/data-exploration/other/gene-condition.ipynb
+++ b/data-exploration/other/gene-condition.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "id": "26b64b61-0987-4b56-ad0a-57992bd4426b",
    "metadata": {
     "tags": []
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "id": "fd8c42b6-7dd3-4271-a2ac-3b7c95d2be4b",
    "metadata": {
     "tags": []
@@ -45,6 +45,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "/home/ashen/projects/eva-opentargets/venv/lib/python3.12/site-packages/cmat-3.3.2-py3.12.egg/cmat/clinvar_xml_io/clinvar_record.py:54: SyntaxWarning: invalid escape sequence '\\?'\n",
+      "/home/ashen/projects/eva-opentargets/venv/lib/python3.12/site-packages/cmat-3.3.2-py3.12.egg/cmat/clinvar_xml_io/clinvar_record.py:54: SyntaxWarning: invalid escape sequence '\\?'\n",
+      "/home/ashen/projects/eva-opentargets/venv/lib/python3.12/site-packages/cmat-3.3.2-py3.12.egg/cmat/clinvar_xml_io/hgvs_variant.py:35: SyntaxWarning: invalid escape sequence '\\.'\n",
+      "/home/ashen/projects/eva-opentargets/venv/lib/python3.12/site-packages/cmat-3.3.2-py3.12.egg/cmat/clinvar_xml_io/hgvs_variant.py:35: SyntaxWarning: invalid escape sequence '\\.'\n",
       "/home/ashen/projects/eva-opentargets/venv/lib/python3.12/site-packages/cmat-3.3.2-py3.12.egg/cmat/output_generation/clinvar_to_evidence_strings.py:198: SyntaxWarning: invalid escape sequence '\\d'\n",
       "/home/ashen/projects/eva-opentargets/venv/lib/python3.12/site-packages/cmat-3.3.2-py3.12.egg/cmat/output_generation/clinvar_to_evidence_strings.py:198: SyntaxWarning: invalid escape sequence '\\d'\n"
      ]
@@ -76,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "35a902e8-3c1b-46f5-ab0c-4e7610edf3c9",
    "metadata": {
     "tags": []
@@ -88,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "385c976a-b476-416f-8ad1-06c112709c86",
    "metadata": {},
    "outputs": [],
@@ -1098,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "d2711ff6-0864-4a87-8cdf-7c8cc97f8a98",
    "metadata": {},
    "outputs": [],
@@ -1110,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "a4bc0f9d-a225-4d7b-bed4-abd835bb713f",
    "metadata": {},
    "outputs": [],
@@ -1330,7 +1334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "76565243-caf7-4bc1-ac25-0c6ae2942578",
    "metadata": {},
    "outputs": [],
@@ -1760,9 +1764,7 @@
    "cell_type": "code",
    "execution_count": 25,
    "id": "d1f616de-eac7-4550-9312-04080828e92b",
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -1959,9 +1961,169 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f008e894-52f0-4870-9e00-06d83fd8bc75",
+   "metadata": {},
+   "source": [
+    "Quick follow-up to confirm the original submission ID (`SUB14299258`) still refers to the same submission."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "966ed644-971e-44b8-a77a-285d0555b3b2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "submitter_ids = set()\n",
+    "trait_terms = set()\n",
+    "\n",
+    "for cvs in current_set.iter_cvs():\n",
+    "    for scv in cvs.scvs:\n",
+    "        include = False\n",
+    "        # Excluded submission\n",
+    "        if scv.submission_name in submission_names_to_exclude:\n",
+    "            submitter_ids.add(scv.submitter_id)\n",
+    "            include = True\n",
+    "    if include:\n",
+    "        for trait in cvs.rcv.traits_with_valid_names:\n",
+    "            trait_terms.add(trait.preferred_or_other_valid_name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "f940321a-67d8-4c15-ba80-802abeea2297",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'239772'}"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submitter_ids"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "dc9be0ca-2626-4b95-a690-05741bb62c6c",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'ABO-related disorder',\n",
+       " 'ADGRE2-related disorder',\n",
+       " 'ADRA2B-related disorder',\n",
+       " 'AGRN-related disorder',\n",
+       " 'ALMS1-related disorder',\n",
+       " 'ARMC9-related disorder',\n",
+       " 'ASXL2-related disorder',\n",
+       " 'BIVM-ERCC5-related disorder',\n",
+       " 'C2-related disorder',\n",
+       " 'CACNA1A-related disorder',\n",
+       " 'CADPS-related disorder',\n",
+       " 'CASP12-related disorder',\n",
+       " 'CBS-related disorder',\n",
+       " 'CCNQ-related disorder',\n",
+       " 'CD36-related disorder',\n",
+       " 'CEP290-related disorder',\n",
+       " 'CHCHD10-related disorder',\n",
+       " 'CHMP2B-related disorder',\n",
+       " 'CLASP1-related disorder',\n",
+       " 'CNTNAP4-related disorder',\n",
+       " 'COL18A1-related disorder',\n",
+       " 'COL7A1-related disorder',\n",
+       " 'EMG1-related disorder',\n",
+       " 'EPPK1-related disorder',\n",
+       " 'FMN2-related disorder',\n",
+       " 'FOLR3-related disorder',\n",
+       " 'FOXD1-related disorder',\n",
+       " 'FUS-related disorder',\n",
+       " 'HNF1A-related disorder',\n",
+       " 'HTT-related disorder',\n",
+       " 'KCNJ18-related disorder',\n",
+       " 'KDM5C-related disorder',\n",
+       " 'KIF5A-related disorder',\n",
+       " 'KIR2DL1-related disorder',\n",
+       " 'KMT2D-related disorder',\n",
+       " 'LTBP4-related disorder',\n",
+       " 'MANF-related disorder',\n",
+       " 'MAP3K14-related disorder',\n",
+       " 'MFSD8-related disorder',\n",
+       " 'MIAT-related disorder',\n",
+       " 'MIR204-related disorder',\n",
+       " 'MKI67-related disorder',\n",
+       " 'MOBP-related disorder',\n",
+       " 'MYH2-related disorder',\n",
+       " 'MYH9-related disorder',\n",
+       " 'MYOM2-related disorder',\n",
+       " 'NCAPD3-related disorder',\n",
+       " 'NEK1-related disorder',\n",
+       " 'NPC1-related disorder',\n",
+       " 'ODAD4-related disorder',\n",
+       " 'ORAI1-related disorder',\n",
+       " 'PCLO-related disorder',\n",
+       " 'PCSK1-related disorder',\n",
+       " 'PI4KA-related disorder',\n",
+       " 'PKD1L1-related disorder',\n",
+       " 'POU4F1-related disorder',\n",
+       " 'PPIP5K2-related disorder',\n",
+       " 'PPP1R9B-related disorder',\n",
+       " 'PRKDC-related disorder',\n",
+       " 'PTEN-related disorder',\n",
+       " 'PTPRQ-related disorder',\n",
+       " 'RAI1-related disorder',\n",
+       " 'RNU4ATAC-related disorder',\n",
+       " 'RPS10-NUDT3-related disorder',\n",
+       " 'RPS10-related disorder',\n",
+       " 'RYK-related disorder',\n",
+       " 'SAMD11-related disorder',\n",
+       " 'SEMA3B-related disorder',\n",
+       " 'SHANK2-related disorder',\n",
+       " 'SHANK3-related disorder',\n",
+       " 'SMARCAL1-related disorder',\n",
+       " 'SOD1-related disorder',\n",
+       " 'SOS2-related disorder',\n",
+       " 'SQSTM1-related disorder',\n",
+       " 'SRD5A2-related disorder',\n",
+       " 'SYNM-related disorder',\n",
+       " 'TAF15-related disorder',\n",
+       " 'TBK1-related disorder',\n",
+       " 'TMEM114-related disorder',\n",
+       " 'TOR1AIP1-related disorder',\n",
+       " 'TREH-related disorder',\n",
+       " 'TRPM3-related disorder',\n",
+       " 'TSC1-related disorder',\n",
+       " 'USH1C-related disorder',\n",
+       " 'USO1-related disorder',\n",
+       " 'USP9Y-related disorder',\n",
+       " 'ZBTB12-related disorder'}"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trait_terms"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "390eba4c-3dab-44f2-836a-896321906697",
+   "id": "6ef71176-eb85-4833-85a0-0aac86a94f62",
    "metadata": {},
    "outputs": [],
    "source": []
